# polkadot-sdk

./: Cargo.toml  removed.txt  removed_folders.txt
.cargo/: config.toml
.github/: CODEOWNERS  pr-custom-review.yml
.github/workflows/: checks-quick.yml
.gitlab/pipeline/: build.yml  publish.yml  zombienet.yml
patches/ahash/: Cargo.toml
patches/ahash/src/: lib.rs
patches/subxt-polkadot-sdk/: Cargo.toml
patches/subxt-polkadot-sdk/src/: lib.rs
substrate/: Cargo.toml  HEADER-APACHE2  HEADER-GPL3
substrate/.maintain/local-docker-test-network/: docker-compose.yml
substrate/client/allocator/src/: lib.rs
substrate/client/api/: Cargo.toml
substrate/client/api/src/: backend.rs  call_executor.rs  client.rs  execution_extensions.rs  in_mem.rs  leaves.rs  lib.rs
substrate/client/authority-discovery/: Cargo.toml  build.rs
substrate/client/authority-discovery/src/: tests.rs  worker.rs
substrate/client/basic-authorship/src/: basic_authorship.rs
substrate/client/block-builder/src/: lib.rs
substrate/client/chain-spec/: Cargo.toml
substrate/client/chain-spec/derive/: Cargo.toml
substrate/client/chain-spec/src/: chain_spec.rs  extension.rs  genesis_block.rs  genesis_config_builder.rs  json_patch.rs  lib.rs
substrate/client/cli/: Cargo.toml
substrate/client/cli/src/: arg_enums.rs  config.rs  lib.rs  runner.rs
substrate/client/consensus/babe/: Cargo.toml
substrate/client/consensus/common/: Cargo.toml
substrate/client/db/benches/: state_access.rs
substrate/client/db/src/: bench.rs  lib.rs  record_stats_state.rs
substrate/client/executor/: Cargo.toml
substrate/client/executor/benches/: bench.rs
substrate/client/executor/common/: Cargo.toml
substrate/client/executor/polkavm/: Cargo.toml
substrate/client/executor/src/: executor.rs  lib.rs  wasm_runtime.rs
substrate/client/executor/wasmtime/: Cargo.toml
substrate/client/informant/: Cargo.toml
substrate/client/informant/src/: display.rs  lib.rs
substrate/client/keystore/src/: lib.rs  local.rs
substrate/client/mixnet/: Cargo.toml
substrate/client/mixnet/src/: api.rs  config.rs  error.rs  extrinsic_queue.rs  lib.rs  maybe_inf_delay.rs  packet_dispatcher.rs  peer_id.rs  protocol.rs  request.rs  run.rs  sync_with_runtime.rs
substrate/client/network/: Cargo.toml  README.md  build.rs
substrate/client/network-gossip/: Cargo.toml
substrate/client/network-gossip/src/: bridge.rs  lib.rs  state_machine.rs  validator.rs
substrate/client/network/benches/: notifications_protocol.rs  request_response_protocol.rs
substrate/client/network/bitswap/: Cargo.toml  build.rs
substrate/client/offchain/: Cargo.toml
substrate/client/offchain/src/: api.rs  lib.rs
substrate/client/offchain/src/api/: http.rs  timestamp.rs
substrate/client/rpc/: Cargo.toml
substrate/client/rpc-api/: Cargo.toml
substrate/client/rpc-spec-v2/: Cargo.toml
substrate/client/service/: Cargo.toml
substrate/client/storage-monitor/: Cargo.toml
substrate/client/sync-state-rpc/: Cargo.toml
substrate/client/sysinfo/: build.rs
substrate/client/telemetry/: Cargo.toml
substrate/client/tracing/: Cargo.toml
substrate/client/utils/: Cargo.toml
substrate/docs/: STYLE_GUIDE.md  Upgrading-2.0-to-3.0.md
substrate/frame/: Cargo.toml
substrate/frame/aura/: Cargo.toml
substrate/frame/babe/: Cargo.toml
substrate/frame/bags-list/: Cargo.toml
substrate/frame/balances/: Cargo.toml
substrate/frame/election-provider-multi-phase/: Cargo.toml
substrate/frame/executive/: Cargo.toml
substrate/frame/glutton/: Cargo.toml
substrate/frame/grandpa/: Cargo.toml
substrate/frame/message-queue/: Cargo.toml
substrate/frame/metadata-hash-extension/: Cargo.toml
substrate/frame/migrations/: Cargo.toml
substrate/frame/mixnet/: Cargo.toml
substrate/frame/offences/: Cargo.toml
substrate/frame/paged-list/: Cargo.toml
substrate/frame/referenda/: Cargo.toml
substrate/frame/remark/: Cargo.toml
substrate/frame/root-testing/: Cargo.toml
substrate/frame/safe-mode/: Cargo.toml
substrate/frame/scheduler/: Cargo.toml
substrate/frame/src/: lib.rs
substrate/frame/staking/: Cargo.toml
substrate/frame/state-trie-migration/: Cargo.toml
substrate/frame/sudo/: Cargo.toml
substrate/frame/support/: Cargo.toml
substrate/frame/system/: Cargo.toml  README.md
substrate/frame/timestamp/: Cargo.toml
substrate/frame/try-runtime/: Cargo.toml
substrate/frame/tx-pause/: Cargo.toml
substrate/frame/utility/: Cargo.toml
substrate/frame/verify-signature/: Cargo.toml
substrate/primitives/api/: Cargo.toml
substrate/primitives/application-crypto/: Cargo.toml
substrate/primitives/arithmetic/: Cargo.toml
substrate/primitives/authority-discovery/: Cargo.toml
substrate/primitives/core/: Cargo.toml
substrate/primitives/genesis-builder/: Cargo.toml
substrate/primitives/io/: Cargo.toml
substrate/primitives/keyring/: Cargo.toml
substrate/primitives/keystore/: Cargo.toml
substrate/primitives/maybe-compressed-blob/: Cargo.toml
substrate/primitives/runtime/: Cargo.toml
substrate/primitives/runtime-interface/: Cargo.toml
substrate/primitives/tracing/: Cargo.toml
substrate/primitives/trie/: Cargo.toml
substrate/primitives/wasm-interface/: Cargo.toml
substrate/primitives/weights/: Cargo.toml
substrate/scripts/: run_all_benchmarks.sh
substrate/scripts/ci/: deny.toml
substrate/src/: lib.rs
substrate/test-utils/: Cargo.toml
substrate/test-utils/cli/: Cargo.toml
substrate/test-utils/client/: Cargo.toml
substrate/test-utils/runtime/: Cargo.toml
substrate/test-utils/src/: lib.rs
substrate/utils/frame/omni-bencher/: Cargo.toml
substrate/utils/frame/omni-bencher/src/: command.rs
substrate/utils/frame/omni-bencher/tests/: benchmark_works.rs
substrate/utils/wasm-builder/: Cargo.toml
substrate/utils/wasm-builder/src/: builder.rs  lib.rs  metadata_hash.rs  prerequisites.rs  version.rs  wasm_project.rs
templates/minimal/node/: Cargo.toml
templates/solochain/node/: Cargo.toml
templates/solochain/runtime/: Cargo.toml
umbrella/: Cargo.toml
umbrella/src/: lib.rs
(+1104 files in other folders)
