[package]
description = "Substrate offchain workers"
name = "sc-offchain"
version = "43.0.0"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true, default-features = true }
futures = { workspace = true }
num_cpus = { workspace = true }
parking_lot = { workspace = true, default-features = true }
rand = { workspace = true, default-features = true }
threadpool = { workspace = true }
tracing = { workspace = true, default-features = true }
sc-client-api.workspace = true
sc-client-api.default-features = true
sc-network.workspace = true
sc-network.default-features = true
sc-network-types.workspace = true
sc-network-types.default-features = true
sc-transaction-pool-api.workspace = true
sc-transaction-pool-api.default-features = true
sp-api.workspace = true
sp-api.default-features = true
sp-core.workspace = true
sp-core.default-features = true
sp-offchain.workspace = true
sp-offchain.default-features = true
sp-runtime.workspace = true
sp-runtime.default-features = true
sp-keystore.workspace = true
sp-keystore.default-features = true
sp-externalities.workspace = true
sp-externalities.default-features = true

[dev-dependencies]
async-trait = { workspace = true }
tokio = { workspace = true, default-features = true }
sc-block-builder = { default-features = true, path = "../block-builder" }
sc-client-db = { default-features = true, path = "../db" }
sc-transaction-pool = { default-features = true, path = "../transaction-pool" }
sc-transaction-pool-api = { default-features = true, path = "../transaction-pool/api" }
sp-consensus = { default-features = true, path = "../../primitives/consensus/common" }
sp-tracing = { default-features = true, path = "../../primitives/tracing" }
substrate-test-runtime-client = { path = "../../test-utils/runtime/client" }

[features]
default = []
