[package]
name = "substrate-wasm-builder"
version = "5.0.0-dev"
authors.workspace = true
description = "Utility for building WASM binaries"
edition.workspace = true
repository.workspace = true
license = "Apache-2.0"
homepage = "https://substrate.io"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
anstyle = "1"
cargo_metadata = "0.18"
strum = { version = "0.25", features = ["derive"] }
tempfile = "3.1.0"
toml = "0.8.2"
walkdir = "2.3.2"
sp-maybe-compressed-blob = { path = "../../primitives/maybe-compressed-blob" }
wasm-opt = "0.116"
parity-wasm = "0.45"
