[package]
name = "substrate-wasm-builder"
version = "17.0.0"
authors.workspace = true
description = "Utility for building WASM binaries"
edition.workspace = true
repository.workspace = true
license = "Apache-2.0"
homepage = "https://substrate.io"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
cargo_metadata = "0.18"
console = "0.15.8"
strum = { version = "0.26", features = ["derive"] }
tempfile = "3.1.0"
toml = "0.8.8"
walkdir = "2.4.0"
sp-maybe-compressed-blob = { path = "../../primitives/maybe-compressed-blob" }
wasm-opt = "0.116"
parity-wasm = "0.45"
