[package]
name = "substrate-wasm-builder"
version = "25.0.0"
authors.workspace = true
description = "Utility for building WASM binaries"
edition.workspace = true
repository.workspace = true
license = "Apache-2.0"
homepage.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
build-helper = { workspace = true }
cargo_metadata = { workspace = true }
console = { workspace = true }
strum = { features = ["derive"], workspace = true, default-features = true }
tempfile = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }
sp-maybe-compressed-blob.workspace = true
sp-maybe-compressed-blob.default-features = true
wasm-opt = { workspace = true }
parity-wasm = { workspace = true }
polkavm-linker = { workspace = true, optional = true }
jobserver = { workspace = true }

shlex = { workspace = true }
