[package]
name = "frame-omni-bencher"
version = "0.10.0"
description = "Freestanding benchmark runner for any Polkadot runtime."
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"

[lints]
workspace = true

[dependencies]
clap = { features = ["derive"], workspace = true }
frame-benchmarking-cli.workspace = true
sc-cli.workspace = true
sc-cli.default-features = true
sp-runtime.workspace = true
sp-runtime.default-features = true
tracing-subscriber = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = { workspace = true }
sp-tracing = { default-features = true, path = "../../../primitives/tracing" }
sp-genesis-builder = { default-features = true, path = "../../../primitives/genesis-builder" }
sc-chain-spec = { path = "../../../client/chain-spec", default-features = false }
